# DeepPotato

./: .gitignore  CMakeLists.txt  README.md
demo/digits/: AutoTest.hpp  CMakeLists.txt  Helper.hpp  Test.hpp  main.cpp
demo/digits/Tests/: AutoTest.hpp  Canvas.hpp  CanvasTest.hpp  Test.hpp  WebCamTest.hpp  Webcam.hpp
demo/digits/models/: network.dpn  readme.md
demo/digits/visualization/: engine.h  helper.h
demo/follower/: CMakeLists.txt  LineFollower.hpp  main.cpp
demo/image_compression/: CMakeLists.txt  main.cpp
demo/image_compression/visualization/: engine.cpp  engine.h
demo/utils/: Canvas.hpp  engine.cpp  engine.h  helper.h
demo/xor/: CMakeLists.txt  main.cpp
src/: Layer.hpp  LayerType.hpp  Matrix.hpp  Network.hpp  Neuron.hpp  ThreadPool.hpp  main.cpp
